# jd_mini_proj6

./: Cargo.toml  README.md
proj_10/: Cargo.toml
proj_10/src/: main.rs
proj_11/: Cargo.toml
proj_7/: Cargo.toml
proj_7/src/: main.rs
proj_8/: Cargo.toml
proj_8/src/: main.rs
proj_9/: Cargo.toml
proj_9/src/: main.rs
src/: main.rs
