[package]
name = "jd_mini_proj6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = {version = "0.4.3"}
rand = {version = "0.8.4"}
ndarray = {version = "0.15.4"}
ndarray-rand = {version = "0.14.0"}
linregress = {version = "0.5.1"}